# Real-Remote-Car

./: .gitignore  README.md
client/: controller.py  producer.py
desktop/: package-lock.json  package.json
desktop/src/: App.vue  main.ts  sytle.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: car_state.rs  config.rs  controller.rs  custom_protocol.rs  lib.rs  runner.rs
desktop/src/components/: CarStateInfo.vue  Navbar.vue  VideoStream.vue
device/: Cargo.toml  README.md  config.py  consumer.py
device/src/: main.rs
device_manager/: Cargo.toml
device_manager/src/: config.rs  main.rs  message_pass.rs  monitor.rs
rrc_client/: Cargo.toml
rrc_client/src/: car_state.rs  config.rs  custom_protocol.rs  main.rs  monitor.rs  runner.rs
rrc_client/src/mqtt/: consumer.rs  producer.rs
rrc_device/: Cargo.toml
rrc_device/src/: config.rs  main.rs  message_pass.rs  monitor.rs
rrc_device/src/mqtt/: consumer.rs  producer.rs
