[package]
name = "rrc_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
serde_yaml = "0.9"
thiserror = "2.0"
gilrs = "0.11.0"

[build-dependencies]
